<?xml version="1.0"?>
<package format="2">
  <name>pure_rviz_plugin</name>
  <version>0.0.0</version>
  <description>The pure_rviz_plugin package</description>

  <maintainer email="liangrongmin@foxmail.com">lrm</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ackermann_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rviz</build_export_depend>

  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
